--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 yfinance>=0.1.63
 pandas>=1.3.0
 numpy>=1.19.0
-pandas-datareader>=0.9.0
-pytest>=6.2.5 
+pytest>=6.2.5
+click>=8.0.0
+rich>=10.0.0 
