--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,6 @@ pytest>=6.2.5
 click>=8.0.0
 rich>=10.0.0
 requests>=2.28.0
-beautifulsoup4>=4.9.3 
+beautifulsoup4>=4.9.3
+selenium>=4.0.0
+selenium-stealth>=1.0.0 
