--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-yfinance>=0.1.63
+yfinance>=0.2.0
 pandas>=1.3.0
-numpy>=1.19.0
-pytest>=6.2.5
+numpy>=1.20.0
+requests>=2.26.0
+beautifulsoup4>=4.9.3
 click>=8.0.0
 rich>=10.0.0
-requests>=2.28.0
-beautifulsoup4>=4.9.3
 selenium>=4.0.0
-selenium-stealth>=1.0.0 
+pytest>=7.0.0
+pytest-cov>=4.0.0 
